--- a/src/login.html
+++ b/src/login.html
@@ -27,7 +27,7 @@
             }
             else {
                 $.ajax({
-                    url: "http://43.142.102.170:3000/getLogin",
+                    url: "http://localhost:3000/getLogin",
                     type: "post",
                     contentType: 'application/json',
                     data: JSON.stringify({
