修改密码界面

--- a/src/personal.html
+++ b/src/personal.html
@@ -73,7 +73,7 @@
                 alert("Í¨¹ý");
             }
             $.ajax({
-                url: "http://43.142.102.170:3000/changePassword",
+                url: "http://localhost:3000/changePassword",
                 type: "post",
                 contentType: 'application/json',
                 data: JSON.stringify({
